@@ -86,6 +86,7 @@
     -<strong>n</strong> <var>modname</var></code></p>
 
     <p><code><strong>apxs</strong> -<strong>q</strong>
+    [ -<strong>v</strong> ]
     [ -<strong>S</strong> <var>name</var>=<var>value</var> ]
     <var>query</var> ...</code></p>
 
@@ -131,15 +132,13 @@
     <section id="options.query"><title>Query Options</title>
       <dl>
       <dt><code>-q</code></dt>
-      <dd>Performs a query for <code>apxs</code>'s knowledge about certain
-      settings. The <var>query</var> parameters can be one or more of the
-      following strings: <code>CC</code>, <code>CFLAGS</code>,
-      <code>CFLAGS_SHLIB</code>, <code>INCLUDEDIR</code>, <code>LD_SHLIB</code>,
-      <code>LDFLAGS_SHLIB</code>, <code>LIBEXECDIR</code>,
-      <code>LIBS_SHLIB</code>, <code>SBINDIR</code>, <code>SYSCONFDIR</code>,
-      <code>TARGET</code>.
+      <dd>Performs a query for variables and environment settings used to 
+      build <code>httpd</code>.  When invoked without <var>query</var> parameters, 
+      it prints all known variables and their values.  The optional <code>-v</code> 
+      parameter formats the list output.
 
-      <p>Use this for manually determining settings. For instance use</p>
+      <p>Use this to manually determine settings used to build the 
+      <code>httpd</code> that will load your module.  For instance use</p>
       <example>
         INC=-I`apxs -q INCLUDEDIR`
       </example>
